--- a/main.tex
+++ b/main.tex
@@ -40,6 +40,8 @@
 
 \begin{document}
 
+% ackn IRC, github, mail, :
+% 2013 pag 6
 {
 	\setbeamertemplate{footline}{}
 	\setbeamertemplate{navigation symbols}{}
